--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,12 +43,10 @@
             android:layout_weight="1"
             android:textAlignment="center"/>
     </LinearLayout>
-    <GridView
-        android:id="@+id/grid_view"
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:numColumns="3"
-        android:stretchMode="columnWidth">
-    </GridView>
+        android:id="@+id/movie_recycle_view">
+
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
