--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
     <style name="TitleText" parent="Text">
-        <item name="android:textSize">24dp</item>
+        <item name="android:textSize">@dimen/title_test_size</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">center</item>
@@ -14,13 +14,12 @@
     <style name="Text" parent="AppTheme">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">12dp</item>
-        <item name="android:padding">10dp</item>
+        <item name="android:textSize">@dimen/text_size</item>
+        <item name="android:padding">@dimen/text_pedding</item>
     </style>
     <style name="Image" parent="Text">
         <item name="android:adjustViewBounds">true</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:scaleType">centerCrop</item>
     </style>
-
 </resources>
